# wasm-primes

./: Cargo.toml  package.json  tsconfig.json
config/: paths.js  webpack.config.js
crate/: lib.rs
src/: App.css  App.tsx  lib.ts
src/components/: Number.tsx  Toggle.tsx
src/hooks/: useWebAssembly.ts
