[package]
name = "prime-numbers"
version = "0.1.0"
authors = ["Aaron Petcoff <a.p.petcoff@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]
path = "crate/lib.rs"

[dependencies]
wasm-bindgen = "=0.2.45"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
